# ant-client

./: CLAUDE.md  Cargo.toml  README.md
.claude/commands/: e2e-node-management-test.md
.github/workflows/: ci.yml
ant-cli/: Cargo.toml
ant-cli/src/: cli.rs  main.rs
ant-cli/src/commands/node/: add.rs  daemon.rs  mod.rs  reset.rs  start.rs  status.rs  stop.rs
ant-core/: Cargo.toml
ant-core/examples/: start-local-devnet.rs
ant-core/src/: config.rs  error.rs  lib.rs
ant-core/src/data/: error.rs  mod.rs  network.rs
ant-core/src/data/client/: batch.rs  cache.rs  cached_merkle.rs  cached_single.rs  chunk.rs  data.rs  file.rs  merkle.rs  mod.rs  payment.rs  quote.rs
ant-core/src/node/: binary.rs  devnet.rs  events.rs  mod.rs  registry.rs  types.rs
ant-core/src/node/daemon/: client.rs  console.html  mod.rs  server.rs  supervisor.rs
ant-core/src/node/process/: detach.rs  mod.rs  spawn.rs
ant-core/tests/: daemon_integration.rs  e2e_chunk.rs  e2e_data.rs  e2e_file.rs  e2e_payment.rs  e2e_security.rs  node_add_integration.rs  node_reset_integration.rs  unit_self_encrypt.rs
ant-core/tests/support/: mod.rs
docs/: node-management-architecture.md
