[workspace]
members = ["ant-core", "ant-cli"]
resolver = "2"

# Pin ant-protocol to the perf/chunk-put-bytes branch so ChunkPutRequest's
# `content` field is `Bytes` (not `Vec<u8>`), letting the close-group fan-out
# in `ant-core/src/data/client/chunk.rs` share a single backing buffer across
# peer sends instead of `to_vec()`-copying the 4 MB payload per peer.
# Remove once https://github.com/WithAutonomi/ant-protocol/pull/6 lands and a
# crates.io release containing it is published.
#
# Two patch tables are needed:
#   * `[patch.crates-io]` overrides ant-protocol when consumed from crates.io
#     (the resolution path used by this repo's `main` branch).
#   * `[patch."https://github.com/WithAutonomi/ant-protocol"]` overrides it
#     when consumed as a git source (the resolution path used by testnet
#     branches like `fix/stability-improvements`, where saorsa-core's
#     `[patch.crates-io]` already replaces crates.io's ant-protocol with a
#     git-source pin on a WithAutonomi branch).
# Whichever table doesn't match the active resolution path emits a benign
# "patch not used in the crate graph" warning.
[patch.crates-io]
ant-protocol = { git = "https://github.com/jacderida/ant-protocol.git", rev = "4aac7d35b69a5d0906a6f2acd5d1d0beb52dcbb8" }

[patch."https://github.com/WithAutonomi/ant-protocol"]
ant-protocol = { git = "https://github.com/jacderida/ant-protocol.git", rev = "4aac7d35b69a5d0906a6f2acd5d1d0beb52dcbb8" }
