[workspace]
members = ["ant-core", "ant-cli"]
resolver = "2"

# Patches for the merkle-test-2026-05-12 branch:
#  - ant-protocol pinned to jacderida's perf/chunk-put-bytes (from Mick's
#    fix/stability-improvements bundle): ChunkPutRequest.content as Bytes.
#  - saorsa-core pinned to LOCAL path so we pick up the eviction PR #114
#    work merged on the test branch (saorsa-core: anselme/merkle-test-2026-05-12).
[patch.crates-io]
ant-protocol = { git = "https://github.com/jacderida/ant-protocol.git", rev = "4aac7d35b69a5d0906a6f2acd5d1d0beb52dcbb8" }
saorsa-core = { path = "../saorsa-core" }

[patch."https://github.com/WithAutonomi/ant-protocol"]
ant-protocol = { git = "https://github.com/jacderida/ant-protocol.git", rev = "4aac7d35b69a5d0906a6f2acd5d1d0beb52dcbb8" }

[patch."https://github.com/saorsa-labs/saorsa-core"]
saorsa-core = { path = "../saorsa-core" }
