[package]
name = "ant-cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "ant"
path = "src/main.rs"

[dependencies]
ant-core = { path = "../ant-core" }
anyhow = "1"
clap = { version = "4", features = ["derive"] }
colored = "3.1.1"
reqwest = { version = "0.12", features = ["json"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
